<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@color/background">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="199dp"
        android:layout_height="240dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/selectCity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/selectCity"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:background="@color/button"
        android:fontFamily="serif"
        android:text="@string/select_city"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <Button
        android:id="@+id/addRestaurant"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="81dp"
        android:background="@color/button"
        android:fontFamily="serif"
        android:text="@string/add_restaurant"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectCity" />/>

    <Button
        android:id="@+id/browseFavourites"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="81dp"
        android:background="@color/button"
        android:fontFamily="serif"
        android:text="@string/browse_favourites"
        android:textColor="@color/text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRestaurant" />/>


</androidx.constraintlayout.widget.ConstraintLayout>